@@ -2085,8 +2085,9 @@ Default: empty
 === content.canvas_reading
 Allow websites to read canvas elements.
 Note this is needed for some websites to work properly.
+On QtWebEngine < 6.6, this setting requires a restart and does not support URL patterns, only the global setting is applied.
 
-This setting requires a restart.
+This setting supports link:configuring{outfilesuffix}#patterns[URL patterns].
 
 This setting is only available with the QtWebEngine backend.
 
